# NDKPraticle

./: .gitignore  CMakeCache.txt  Makefile  cmake_install.cmake  gradle.properties  local.properties  settings.gradle
1_helloworld/: CMakeLists.txt  build.gradle
4_datatype_bitmap/: CMakeLists.txt
4_datatype_bitmap/src/androidTest/java/com/example/a4_datatype_bitmap/: ExampleInstrumentedTest.java
4_datatype_bitmap/src/main/: AndroidManifest.xml
4_datatype_bitmap/src/main/cpp/: BitmapUtil.cpp  Hello.cpp
4_datatype_bitmap/src/main/cpp/include/: BitmapUtil.h  Hello.h
4_datatype_bitmap/src/main/java/com/example/a4_datatype_bitmap/: MainActivity.java
4_datatype_bitmap/src/main/res/values/: strings.xml
4_datatype_bitmap/src/test/java/com/example/a4_datatype_bitmap/: ExampleUnitTest.java
5_call_so/: CMakeLists.txt
5_call_so/src/androidTest/java/com/example/a5_opencv/: ExampleInstrumentedTest.java
5_call_so/src/main/: AndroidManifest.xml
5_call_so/src/main/cpp/: Hello.cpp
5_call_so/src/main/cpp/include/: BitmapUtil.h  Hello.h
5_call_so/src/main/java/com/example/a5_opencv/: MainActivity.java
5_call_so/src/main/res/layout/: activity_main.xml
5_call_so/src/main/res/values/: strings.xml
5_call_so/src/test/java/com/example/a5_opencv/: ExampleUnitTest.java
6_opencv2/: CMakeLists.txt  build.gradle
6_opencv2/src/androidTest/java/com/example/a6_opencv2/: ExampleInstrumentedTest.java
6_opencv2/src/main/: AndroidManifest.xml
6_opencv2/src/main/cpp/: Hello.cpp
6_opencv2/src/main/cpp/include/: Hello.h
6_opencv2/src/main/res/layout/: activity_main.xml
6_opencv2/src/main/res/values/: strings.xml
(+43 files in other folders)
